# arm_stm

./: .gitignore  .mxproject  .project  CODE_DOCUMENTATION.md  REPO_ANALYSIS.md  armmm Debug.launch  armmm.ioc  calibrate_all.py  calibrate_pitch_dir.py  calibrate_pots.py  calibrate_wrist.py  check_z_encoder_dir.py  debug_com10.py  espa_final.ino  espb_zaxis_integrated.ino  pitch_diagnostic.py  pot_calibration_result.h  read_encoders.py  read_limp.py  repomix-output-gold.md  roll.sid  step_response_actuator_4.csv  step_response_logger.py  test_usb_arm.py  tune_z_pid.m  untitled.m  wiring.md  z_step_logger.py
Core/Inc/: RobotConfig.h  RobotCore.h  main.h  stm32f4xx_it.h
Core/Src/: RobotCore.cpp  adc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Debug/: armmm.elf  armmm.list  armmm.map  sources.mk
Debug/Core/Src/: RobotCore.cyclo  RobotCore.su  adc.d  freertos.cyclo  freertos.d  freertos.su  main.cyclo  main.su  stm32f4xx_hal_msp.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d  tim.cyclo  tim.d  tim.su  usart.cyclo  usart.d  usart.su
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_dma.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_spi.d  subdir.mk
Debug/USB_DEVICE/App/: subdir.mk  usbd_cdc_if.cyclo  usbd_cdc_if.d  usbd_cdc_if.su  usbd_desc.d
Debug/USB_HOST/App/: subdir.mk  usb_host.d
Release/: armmm.elf  armmm.list  armmm.map  makefile  objects.list
Release/Core/Src/: RobotCore.cyclo  RobotCore.d  RobotCore.su  adc.su  dma.d  freertos.cyclo  freertos.su  gpio.d  gpio.su  i2c.d  i2c.su  main.cyclo  main.d  main.su  spi.d  spi.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.su  subdir.mk  tim.cyclo  tim.su  usart.su
Release/Core/Startup/: subdir.mk
Release/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_adc.d  stm32f4xx_hal_adc_ex.cyclo  stm32f4xx_hal_adc_ex.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.cyclo  stm32f4xx_hal_flash_ex.cyclo  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ex.su  stm32f4xx_hal_gpio.d  stm32f4xx_hal_i2c.d  stm32f4xx_hal_i2c.su  stm32f4xx_hal_i2c_ex.d  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_spi.cyclo  stm32f4xx_hal_spi.su  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_hal_uart.cyclo  stm32f4xx_hal_uart.d  subdir.mk  (+4 more)
Release/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_cdc_if.cyclo  usbd_cdc_if.su
USB_DEVICE/App/: usbd_cdc_if.c
arm_hardware_complete (1)/: INTEGRATION_GUIDE.md
arm_hardware_complete (1)/src/arm_hardware/: CMakeLists.txt  arm_hardware_plugin.xml  package.xml
arm_hardware_complete (1)/src/arm_hardware/config/: controllers.yaml  ros2_control.urdf.xacro
arm_hardware_complete (1)/src/arm_hardware/include/arm_hardware/: arm_hardware_interface.hpp  protocol.hpp  uart_driver.hpp
arm_hardware_complete (1)/src/arm_hardware/src/: arm_hardware_interface.cpp  uart_driver.cpp
arm_hardware_complete (1)/src/arm_hardware/stm32_patch/: RobotCore_protocol_patch.h
(+15 files in other folders)
